# AI-Test-Task

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  main.py  main2.py  pyproject.toml  requirements.txt
backend/agent/: __init__.py  fallback.py  graph.py  state.py
backend/agent/nodes/: __init__.py  build_plan.py  finalize_answer.py  prepare_answer.py  research_loop.py  shared.py
backend/api/: routes.py
backend/bridge_time_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/clients/: __init__.py  llm.py  wikipedia.py
backend/core/: __init__.py  logger.py  settings.py
backend/schemas/: __init__.py  request.py  response.py
backend/services/: __init__.py  agent.py
frontend/: nginx.conf  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
