[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-time-agent"
version = "0.1.0"
description = "FastAPI service that answers bridge-crossing questions with a small agent workflow."
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "httpx",
  "langgraph",
  "openai",
  "pydantic",
  "tenacity",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "pytest-asyncio",
  "respx",
  "ruff",
]

# Код в этой же директории публикуется как пакет `backend` (импорты `from backend...` без смены структуры каталогов).
[tool.setuptools]
package-dir = { "backend" = "." }
packages = [ "backend" ]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = [".."]
packages = ["backend"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
